--- a/overrides/main.html
+++ b/overrides/main.html
@@ -19,12 +19,12 @@
   {% else %}
   <meta property="og:image" content="https://storageapi.fleek.co/fleek-team-bucket/meta.png">
   {% endif %}
-  <meta property="og:image:alt" content="Plug">
+  <meta property="og:image:alt" content="DAB">
   <meta property="og:image:type" content="image/png">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@plug_wallet">
-  <meta name="twitter:creator" content="@plug_wallet">
+  <meta name="twitter:site" content="@dab_ooo">
+  <meta name="twitter:creator" content="@dab_ooo">
   {% if page and page.meta and page.meta.title %}
     <meta property="twitter:title" content="{{ page.meta.title }}">
   {% elif page and page.title and not page.is_homepage %}
@@ -40,6 +40,6 @@
   {% else %}  
   <meta name="twitter:image" content="https://storageapi.fleek.co/fleek-team-bucket/meta.png">
   {% endif %}
-  <meta name="twitter:image:alt" content="Plug wallet">
+  <meta name="twitter:image:alt" content="DAB">
 
 {% endblock %}
